# shop_gold

./: .pre-commit-config.yaml  README.md  alembic.ini  app.py  config.py  docker-compose.yml  models.py  pyproject.toml  requirements.in  requirements.txt  wsgi.py
migration/: env.py
migration/versions/: 44363c4c0f6a_fix_table_products.py  7dd8a8a8aa45_initial_revision.py  9da0b45f8807_create_new_table_news.py  bef6b1d36074_first.py
oits-flask/shop_backend/: alembic.ini  models.py
oits-flask/shop_backend/choices/: order_status.py
oits-flask/shop_backend/migrations/: env.py
oits-flask/shop_backend/models/: order_history.py  orders.py  payments.py  products.py  users.py
oits/models/: __init__.py  base.py  news.py  order_history.py  orders.py  payments.py  products.py  users.py
static/css/: footer.css  register.css  sign_in.css
templates/: about.html  base.html  index.html  news.html  register.html  sign_in.html
