[project]
name = 'shop-gold'
version = '0.1.0'
description = 'Магазин игровой валюты'

dependencies = [
    'blinker',
    'click',
    'Flask',
    'itsdangerous',
    'Jinja2',
    'MarkupSafe',
    'Werkzeug',
    'Flask-SQLAlchemy',
    'pip-tools',
    'SQLAlchemy',
    'alembic',
    'passlib',
    'psycopg2-binary',
    'pip-tools',
    'gunicorn',
    'pre-commit',
]

[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120

[tool.poetry]
name = "test-package"
version = "0.1.0"
description = ""
authors = ["Константин <polyakov_ks@smart-transport.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
